@@ -1,3 +1,8 @@
+TAG: nomenload-6-0-12-3
+DATE: 08/01/2018
+STAFF: lec 
+CHANGES: remove ${LOG} file nomenload.sh
+
 TAG: nomenload-6-0-12-2
 DATE: 05/22/2018
 STAFF: lec 
